--- a/hobbies.html
+++ b/hobbies.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="css/styles.css">
+
 <h3>Hobbies</h3>
     <ol>
         <li>Painting</li>
@@ -6,4 +8,4 @@
         <li>Travelling</li>
     </ol>
 
-<a href="profile.html">Go Back</a>
+<a href="index.html">Go Back</a>
