--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> ❤ Shefali's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-
     <table cellspacing=20>
         <tr>
             <td>
@@ -43,9 +44,9 @@
         <li>Graduation</li>
     </ul>
 
-    <hr size="3">
+    <hr size="6">
     <h3> <a href="hobbies.html">My Hobbies</a> </h3>
-    
+
 
     <h3>Skills</h3>
 
